# rpi-bno055

./: .ruff.toml  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
rpi_bno055/: __init__.py  bno055.py  constants.py  modes.py  power_modes.py  regaddrs0.py  scripts.py  sys_err_codes.py  sys_status_codes.py  unit_sel.py
