[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi_bno055"
version = "0.1.0"
dependencies = [
    "smbus2 >= 0.4.0"
]

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#package-discovery
[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default
