[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi_bno055"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "smbus2 >= 0.4.0"
]

[project.scripts]
bno055-begin = "rpi_bno055:scripts.begin"
bno055-status = "rpi_bno055:scripts.system_status"
bno055-calib = "rpi_bno055:scripts.calibration_check"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#package-discovery
[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# Inherit rules from pycodestyle, pyflakes, flake8-simplify, isort
select = ["F", "E", "SIM", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
