[metadata]
name = rpi_bno055
version = 0.1.0
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    smbus2 >= 0.4.0

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    bno055-begin = rpi_bno055.scripts:begin
    bno055-status = rpi_bno055.scripts:system_status
    bno055-calib = rpi_bno055.scripts:calibration_check
    bno055-acconly = rpi_bno055.scripts:acconly
    bno055-imu = rpi_bno055.scripts:imu

[options.extras_require]
dev =
    mypy
    ruff

[mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
